--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="/recipes/chickencury.html">Chicken Curry</a></li>
+        <li><a href="/recipes/naan.html">Naan</a></li>
     </ul>
 </body>
 </html>
