--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/recipes/chickencury.html">Chicken Curry</a></li>
         <li><a href="/recipes/naan.html">Naan</a></li>
+        <li><a href="/recipes/friedrice.html">Fried Rice</a></li>
     </ul>
 </body>
 </html>
