Playing around with CSS properties to get a feel for things. This is just to practice and get used to writing CSS

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yummy Eats</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="/recipes/chickencury.html">Chicken Curry</a></li>
-        <li><a href="/recipes/naan.html">Naan</a></li>
-        <li><a href="/recipes/friedrice.html">Fried Rice</a></li>
+<body class="fonts">
+    <h1 id="main-headline1">Odin Recipes</h1>
+    <ul class="list">
+        <li class="list-1"><a href="/recipes/chickencury.html">Chicken Curry</a></li>
+        <li class="list-2"><a href="/recipes/naan.html">Naan</a></li>
+        <li class="list-3"><a href="/recipes/friedrice.html">Fried Rice</a></li>
     </ul>
 </body>
 </html>
