--- a/recipes/chickencury.html
+++ b/recipes/chickencury.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chicken curry</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Chicken Curry:</h1>
-    <img src="../images/curry.jpg" alt="Chicken Curry" width="400" height="400">
+    <h1 id="main-headline2">Chicken Curry:</h1>
+    <img src="../images/curry.jpg" alt="Chicken Curry">
 
     <!-- Description heading and its paragraph -->
     <h2>Description:</h2>
