Played around with some basic CSS to get a feel of the Cascaded

--- a/recipes/chickencury.html
+++ b/recipes/chickencury.html
@@ -6,16 +6,16 @@
     <title>chicken curry</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="fonts">
     <h1 id="main-headline2">Chicken Curry:</h1>
     <img src="../images/curry.jpg" alt="Chicken Curry">
 
     <!-- Description heading and its paragraph -->
-    <h2>Description:</h2>
+    <h2 class="sub-headline">Description:</h2>
     <p>Indulge in the rich and aromatic flavors of our chicken curry. Tender chicken pieces are simmered in a fragrant blend of spices, tomatoes, and creamy coconut milk, creating a mouthwatering dish that's perfect for a comforting, satisfying meal. Serve it with steamed rice or naan for an authentic and satisfying culinary experience.</p>
 
     <!-- Unordered list of the ingredients needed -->
-    <h2>Ingredients:</h2>
+    <h2 class="ingredients">Ingredients:</h2>
     <ul>
         <li>500g (about 1 lb) chicken pieces, bone-in for more flavor</li>
         <li>2 tablespoons cooking oil</li>
@@ -34,7 +34,7 @@
     </ul>
 
     <!-- Ordered list for the steps needed -->
-    <h2>Steps:</h2>
+    <h2 class="steps">Steps:</h2>
     <ol>
         <li>Start by washing and cutting the chicken into pieces, if it's not already done. Pat it dry with paper towels and set it aside.</li>
         <li>In a large, heavy-bottomed pan or pot, heat the cooking oil over medium heat. Add the finely chopped onions and sauté until they become soft and translucent.</li>
